2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (Controller::edit_actions): Rename from
	clip_actions.
	(Controller::erase): Add action.
	(Controller::load_xml): Fetch cut, copy, paste and delete menu
	items from the glade file.

	* src/mainwindow.{cc,h} (MainWindow::on_{cut,copy,paste,erase}):
	Add and implement new signal handlers.
	(MainWindow::connect_signals): Connect the cut, copy, paste and
	erase actions to the new signal handlers.
	(MainWindow::on_filetree_switch_buffer): Enable or disable the
	edit actions based on the editability of the file buffer.

2004-06-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (Controller): Add an Edit menu, as well
	as a Cut, Copy and Paste menu items.

	* ui/mainwindow.glade: As above, and move Undo and Preferences
	into the Edit menu.

2004-06-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* po/Makevars (XGETTEXT_OPTIONS): Recent intltool now parses the
	Makevars file, thus set this variable to the options we want.

2004-06-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Get rid of the redundant
	-DREGEXXER_LOCALEDIR=\""$(datadir)/locale"\" definition.

	* src/main.cc (locale_directory): New string constant.
	(main): Replace REGEXXER_LOCALEDIR with locale_directory.

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Add -DGTKMM_DISABLE_DEPRECATED.

	* src/filetree.cc (FileTree::FileTree): Replace the deprecated
	set_sort_column_id() by set_sort_column().
	* src/filetreeprivate.cc
	(FileTree::ScopedBlockSorting::ScopedBlockSorting): ditto
	(FileTree::ScopedBlockSorting::~ScopedBlockSorting): ditto.

	* src/mainwindow.cc (MainWindow::on_go_next): Use scroll_to()
	in place of the deprecated scroll_to_mark().

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am (stockimages.h): Strip the directory prefix
	from filenames if present, because of the possibility of automatic